docs(docs-infra): fix close button clickability and prevent layout shift
Adjust the z-index to ensure the close button remains clickable.

Also remove an unnecessary `position: relative` that was causing
layout shifts in the docs UI, which resulted in a visible and
unintended layout movement.

(cherry picked from commit 3ce1d9a755da200d6cbfd906f3abde3020e5452f)

--- a/adev/src/app/core/layout/navigation/navigation.component.scss
+++ b/adev/src/app/core/layout/navigation/navigation.component.scss
@@ -100,7 +100,6 @@
   &.adev-nav-primary--next,
   &.adev-nav-primary--rc {
     // change nav background to indicate this is the rc docs
-    position: relative;
     background: linear-gradient(
       140deg,
       color-mix(in srgb, var(--orange-red), transparent 60%) 0%,
@@ -116,6 +115,7 @@
       width: 100%;
       height: 100%;
       background-color: var(--octonary-contrast);
+      z-index: -1;
     }
     .adev-version-button {
       border: 1px solid var(--quinary-contrast);
